# imagepullsecret-sync

./: Cargo.toml  Dockerfile  README.md  registry_secrets.yaml
.github/workflows/: rust.yml
src/: config.rs  main.rs  worker.rs
