[package]
name = "imagepullsecret-sync"
version = "0.1.0"
authors = ["yahaa <1477765176@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.47.0"
kube-runtime = "0.47.0"
k8s-openapi = { version = "0.10.0", default-features = false, features = ["v1_17"] }
log = "0.4.11"
tokio = { version = "^1.0.1", features = ["full"] }
env_logger = "0.7.1"
futures = "0.3.5"
chrono="0.4.0"
serde_json = "1.0.57"
serde_yaml = "0.8.14"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.21"
thiserror = "1.0.21"
snafu = { version = "0.6.8", features = ["futures"] }
base64 = "0.13.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


